[project]
name = "ragfundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "pymupdf>=1.26.7",
    "pypdf>=6.7.0",
    "sentence-transformers>=5.2.2",
]
